--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ng2-books",
-  "version": "0.0.1",
+  "name": "torrfeed-frontend",
+  "version": "1.0.0",
   "description": "Aggregates torrents from multiple RSS feed sources. Subscribe to shows to collect info about releases.",
   "scripts": {
     "start": "node ./node_modules/gulp/bin/gulp.js",
@@ -28,6 +28,7 @@
     "angular-in-memory-web-api": "~0.2.2",
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "lodash": "^4.17.3",
     "reflect-metadata": "^0.1.8",
     "rxjs": "5.0.1",
